# evalhub-sdk

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: pre-commit.yml
examples/: lighteval_demo_external.ipynb
examples/lighteval_adapter/: lighteval_adapter.py
src/evalhub/: __init__.py  cli.py
src/evalhub/adapter/: __init__.py  cli.py
src/evalhub/adapter/api/: __init__.py  endpoints.py  router.py
src/evalhub/adapter/client/: __init__.py  adapter_client.py  discovery.py
src/evalhub/adapter/models/: __init__.py  framework.py
src/evalhub/adapter/server/: __init__.py  app.py
src/evalhub/models/: __init__.py  api.py
src/evalhub/utils/: __init__.py  logging.py  validation.py
tests/integration/: test_adapter_integration.py
tests/unit/: test_client.py  test_framework_adapter.py  test_models_api.py  test_server.py
